# slang

./: .gitignore  Cargo.toml  README.md
data/pass/: linked-lists.sl
misc/try1/: assemble.sh  hello.s  out
misc/try2/: amd64hw.asm  compile-run.sh
misc/try3/: main.c  main.s
src/: ast.rs  codegen.rs  grammar.lalrpop  lib.rs  main.rs  shitty_codegen.rs
