[package]
name = "slang"
version = "0.1.0"
authors = ["Yohaï-Eliel Berreby <yberreby@protonmail.ch>"]
edition = "2018"
build = "build.rs" # LALRPOP preprocessing

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
lalrpop-util = "0.17.2"
regex = "0.2.0"

# Add a build-time dependency on the lalrpop library:
[build-dependencies]
lalrpop = "0.17.2"

